2005-07-09  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/Makefile.in po/sane-backends.bg.po po/sane-backends.cs.po
	  po/sane-backends.da.po po/sane-backends.de.po
	  po/sane-backends.es.po po/sane-backends.fi.po
	  po/sane-backends.fr.po po/sane-backends.it.po
	  po/sane-backends.nl.po po/sane-backends.no.po
	  po/sane-backends.pl.po po/sane-backends.pt.po
	  po/sane-backends.ru.po po/sane-backends.sv.po: Updated Danish
	  translation (from Mogens Jaeger <mogensjaeger@get2net.dk>). Made
	  sure that no errors occur because xgettext/xmsgfmt think that
	  "%" is a C format string. Regenerated all po files. 

	* configure configure.in include/sane/config.h.in: Make sure that
	  getopt is not built on OS/2 (from Franz Bakan <fbakan@gmx.net>).

2005-07-07  Frank Zago

	* AUTHORS backend/leo.c backend/leo.h backend/matsushita.c
	  backend/matsushita.h backend/sceptre.c backend/sceptre.h
	  backend/teco1.c backend/teco1.h backend/teco2.c backend/teco2.h
	  backend/teco3.c backend/teco3.h frontend/tstbackend.c: new
	  email address.
	
2005-07-07  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek.c: Fixed scanarea calculation.
	* backend/plustek-usbshading.c: Fixed fine-white calibration.

2005-07-05  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/descriptions-external/epkowa.desc: Updated according to
	  the info provided by  Olaf Meeuwissen <olaf.meeuwissen@avasys.jp>

2005-07-04  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek.[ch] backend/plustek-usbscan.c 
	  backend/plustek-usbshading.c backend/plustek-usbdevs.c
	  backend/plustek-usbdevs.c backend/plustek-usbimg.c
	  backend/plustek-usbmap.c backend/plustek-usbhw.c
	  backend/plustek-usbcal.c backend/plustek-usb.[ch]:
	  Added button support, did some cleanup, added IPC between
	  reader- and parent-process.

2005-07-04  ULrich Deiters <ulrich.deiters@uni-koeln.de>
