@@ -1,5 +1,14 @@
 gt68xx.CHANGES -*-text-*-
 
+V 1.0.71 (2005-07-10)
+
+* Changed resolution from 75 to 100 dpi and changed 16 bit/color to 12 based on
+  a user report for the Visioneer OneTouch 7300. Updated .desc.
+* Moved check for stable lamp to its own function.
+* Mustek ScanExpress A3 USB: Use CIS calibration. Use lamp warmup.
+* Fixed CCD on GT6801 scanning (color scanning was broken due to a change in
+  motormode_2.
+
 V 1.0.70 (2005-05-29)
 
 * Start exposure with the settings from the scanner entry.
